# mortgage_calculator_API

./: .gitlab-ci.yml  README.md  docker-compose.test.yml
backend/: pyproject.toml  requirements.txt
backend/api/: filters.py  serializers.py  tests.py  views.py
backend/config/: routers.py  settings.py  urls.py
backend/mortgage/: admin.py  apps.py  models.py
backend/mortgage/migrations/: 0001_initial.py
